--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "dotenv-webpack": "^1.8.0",
+    "mdbreact": "^4.26.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
